# carbon

./: .gitignore  CMakeLists.txt  README.md  build.py
fabric-mod/: build.gradle  gradle.properties  gradlew
fabric-mod/gradle/wrapper/: gradle-wrapper.properties
fabric-mod/src/main/java/com/vibecoding/carbon/: CarbonMod.java
fabric-mod/src/main/java/com/vibecoding/carbon/command/: CarbonCommand.java
fabric-mod/src/main/java/com/vibecoding/carbon/config/: CarbonConfig.java  ModMenuIntegration.java
fabric-mod/src/main/java/com/vibecoding/carbon/mixin/: ChunkBuilderMixin.java  LightmapMixin.java  PauseScreenMixin.java
fabric-mod/src/main/java/com/vibecoding/carbon/npu/: NPUBridge.java
fabric-mod/src/main/java/com/vibecoding/carbon/screen/: CarbonConfigScreen.java
fabric-mod/src/main/resources/: carbon.mixins.json  fabric.mod.json
fabric-mod/src/main/resources/native/win-x64/: chunk_mesh_v1.onnx  light_baking_v1.onnx
include/carbon/: common_types.h
include/carbon/backends/: directml_backend.h  mock_backend.h  openvino_backend.h  ort_backend.h  tensorrt_backend.h
include/carbon/compute/: chunk_mesh_processor.h  light_bake_processor.h
include/carbon/hal/: npu_backend.h
include/carbon/scheduler/: npu_scheduler.h  task_queue.h
include/carbon/utils/: logger.h  ort_api_indices.h  ort_loader.h
jni/: carbon_npu_jni.cpp
models/: export_models.py
src/: dllmain.cpp
src/backends/: directml_backend.cpp  mock_backend.cpp  openvino_backend.cpp  ort_backend.cpp  tensorrt_backend.cpp
src/compute/: chunk_mesh_processor.cpp  light_bake_processor.cpp
src/hal/: npu_backend.cpp
src/scheduler/: npu_scheduler.cpp  task_queue.cpp
src/utils/: logger.cpp
tests/: CMakeLists.txt  test_framework.h  test_main.cpp  test_mock_backend.cpp  test_scheduler.cpp  test_task_queue.cpp
